# BD_proj

./: .env  README.md  gridsearch_report.txt  pyproject.toml  run.sh
artifacts/: visualization_report.html
predictions.parquet/: .part-00000-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00001-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00002-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00003-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00004-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00005-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00006-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00007-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00008-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00009-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00010-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  .part-00011-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet.crc  part-00000-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  part-00001-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  part-00002-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  part-00003-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  part-00004-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  part-00005-b6e5009e-6a90-44d4-be51-e5414b5c1d85-c000.snappy.parquet  (+6 more)
src/: __init__.py  download_nltk_data.py  load_data.py  (+7 more)
(+53 files in other folders)
