[project]
name = "bd-proj"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Slava", email = "slava200578200@gmail.com" }
]
dependencies = [
    "pyspark>=4.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "nltk>=3.9.1",
    "kagglehub>=0.3.12",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "dotenv>=0.9.9",
    "seaborn>=0.13.2",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "rich>=14.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bd_proj"]
